.archive/wazuh/app/httproute.yaml
---
# yaml-language-server: $schema=https://schemas.vzkn.eu/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: wazuh
  annotations:
    gatus.home-operations.com/endpoint: |-
      group: security
spec:
  hostnames:
    - wazuh.vzkn.eu
  parentRefs:
    - name: envoy-internal
      namespace: network
  rules:
    - backendRefs:
        - name: wazuh-dashboard
          namespace: security
          port: 5601
